syntax = "proto3";
// `java_package` must match the package name you declare for `androidPackage` in your pubspec.yaml
option java_package = "org.beatscratch.commands";

message MidiSynthesizer {
  string id = 1;
  string name = 2;
  bool enabled = 3;
}

message MidiController {
  string id = 1;
  string name = 2;
  bool enabled = 3;
}

message MidiDevices {
  repeated MidiSynthesizer synthesizers = 1;
  repeated MidiController controllers = 2;
}

message SynthesizerApp {
  string name = 1;
  bool installed = 2;
  string storeLink = 3;
  string launchLink = 4;
}

message ControllerApp {
  string name = 1;
  bool installed = 2;
  string storeLink = 3;
  string launchLink = 4;
}

message MidiApps {
  repeated SynthesizerApp synthesizers = 1;
  repeated ControllerApp controllers = 2;
}

message MidiNotes {
  repeated uint32 midi_notes = 1;
}

message RegisterMelody {
  string melody_id = 1;
  string part_id = 2;
}

message Playback {
  enum Mode {
    score = 0;
    section = 1;
  }
  Mode mode = 1;
}

// The data type used to send recordings to Dart for processing into a Melody.
// Any arbitrary MIDI input on the platform can be recorded into a new
// RecordedData and appended to the RecordedSegment, along with times for
// RecordedBeats, and the shared Dart side can process this into a Melody.
message RecordedSegment {
  message RecordedBeat {
    uint64 timestamp = 1;
    uint32 beat = 2;
  }
  repeated RecordedBeat beats = 1;
  message RecordedData {
    uint64 timestamp = 1;
    bytes midiData = 2;
  }
  repeated RecordedData recorded_data = 2;
}
